# univ2-tri-arb

./: .env.example  .gitignore  Cargo.toml  LICENSE  Readme.md
contracts/: tax_checker.sol
src/: calc.rs  config.rs  constants.rs  helpers.rs  lib.rs  main.rs  state.rs  updater.rs
src/abi/: ArbContract.json  BatchCollector.json  TaxChecker.json  UniV2Query.json
src/components/simulator/: Readme.md
src/contract_modules/: mod.rs
src/contract_modules/uniswap_v2/: checkpoint.rs  constants.rs  mod.rs  types.rs
src/contract_modules/uniswap_v2/bindings/: mod.rs  uni_v2_query.rs  uni_v2_router.rs
src/contract_modules/uniswap_v2/data_collector/: collector.rs  data_collector.rs  mod.rs  tax_checker.rs
src/recon/: mempool.rs  mod.rs
src/states/: block_state.rs  mod.rs
src/utils/: mod.rs
